--- a/SimpleApp/SimpleApp.csproj
+++ b/SimpleApp/SimpleApp.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\SimpleApp.Data\SimpleApp.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+  </ItemGroup>
+
 </Project>
